2012-12-17  Karl Berry  <karl@gnu.org>

	* pretest 4.13.92.

2012-12-15  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi: use "sectioning" as the general term
	in a few places.
	(Other Customization Variables) <TREE_TRANSFORMATIONS>: more
	on default.

2012-12-11  Eli Zaretskii  <eliz@gnu.org>

	* configure.ac (TGT_IS_WINDOWS): New conditional.
	* util/Makefile.am (bin_SCRIPTS) [TGT_IS_WINDOWS]: add Windows
	batch files to bin_SCRIPTS.

2012-12-14  Ineiev  <ineiev@gmail.com>  (tiny change)

	* configure.ac (HAVE_TERMLIBS): new conditional.  End with
	repeated warning about no terminal library for visibility.
	* Makefile.am (SUBDIRS) [HAVE_TERMLIBS]: only include info/ if
	new conditional is true.
	* man/Makefile.am (man_MANS) [HAVE_TERMLIBS]: likewise for making
	info.1 and infokey.1.

2012-12-14  Thien-Thi Nguyen  <ttn@gnuvola.org>  (tiny change)

	* doc/texinfo.txi (Three Arguments):
	Add @findex xrefautomaticsectiontitle.

2012-12-14  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Other Customization Variables): edit
	wording of defaults, etc.

2012-12-10  Patrice Dumas  <pertusus@free.fr>

	* configure.ac, tp/Makefile.am, tp/texi2any.pl, tp/Texinfo/Common.pm, 
	tp/Texinfo/Convert/XML.pm, tp/maintain/catalog.xml.in,
	tp/t/test_utils.pl,
	doc/texinfo.txi (Other Customization Variables):
	Add a new configure variable TEXINFO_DTD_VERSION that holds the version
	of the dtd.  Add the corresponding customization variable in tp/.

2012-12-08  Patrice Dumas  <pertusus@free.fr>

	* doc/texinfo.txi (Command Contexts): @verb is not accepted in 
	simple text commands and sectioning commands.

2012-12-02  Karl Berry  <karl@gnu.org>

	* configure.ac (TERMLIB_VARIANTS): try tinfo first.
	Suggestion from Andreas Schwab, 02 Dec 2012 10:00:44.

2012-12-02  Colin Watson  <cjwatson@ubuntu.com>

	Build gnulib/lib directory in native-tools pass when
	cross-compiling (bug #37852).
	* Makefile.am (SUBDIRS) [TOOLS_ONLY]: Add gnulib/lib.

2012-12-02  Karl Berry  <karl@gnu.org>
